@@ -7,6 +7,7 @@ gtkdoc-mkman
 gtkdoc-mktmpl
 gtkdoc-scan
 gtkdoc-scanobj
+gtkdoc-scangobj
 config.h.in
 Makefile.in
 Makefile
