@@ -1,12 +1,13 @@
 ## Process this file with automake to produce Makefile.in
 
 bin_SCRIPTS = \
-	gtkdoc-scanobj \
-	gtkdoc-scan    \
-	gtkdoc-mktmpl  \
-	gtkdoc-mkdb    \
-	gtkdoc-mkhtml  \
-	gtkdoc-mkman   \
+	gtkdoc-scanobj  \
+	gtkdoc-scangobj \
+	gtkdoc-scan     \
+	gtkdoc-mktmpl   \
+	gtkdoc-mkdb     \
+	gtkdoc-mkhtml   \
+	gtkdoc-mkman    \
 	gtkdoc-fixxref
 
 gtkdocdatadir = $(datadir)/gtk-doc
