@@ -55,5 +55,6 @@ gtkdoc-mkdb
 gtkdoc-mktmpl
 gtkdoc-scan
 gtkdoc-scanobj
+gtkdoc-scangobj
 ],
 [chmod +x gtkdoc-mkman gtkdoc-mkhtml gtkdoc-fixxref gtkdoc-mkdb gtkdoc-mktmpl gtkdoc-scan gtkdoc-scanobj])
